# ryujinx

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CONFIG.md  CONTRIBUTING.md  Directory.Packages.props  GLScreen.cs  KEYS.md  LICENSE.txt  Program.cs  README.md  Ryujinx.conf  Ryujinx.csproj  Ryujinx.sln  Ryujinx.sln.DotSettings  appveyor.yml  crowdin.yml  global.json  mkdocs.yml
.github/: FUNDING.yml  csc.json  dependabot.yml  labeler.yml  reviewers.yml  update_reviewers.py
.github-orig/: reviewers.yml
ARMeilleure/: ARMeilleure.csproj  Allocators.cs  Optimizations.cs  Statistics.cs
ChocolArm64/: ABitUtils.cs  AOpCodeTable.cs  AOptimizations.cs  AThread.cs  ATranslatedSub.cs  ATranslatedSubType.cs  ATranslator.cs  ATranslatorCache.cs  BitUtils.cs  ChocolArm64.csproj  CpuThread.cs  OpCodeTable.cs  Optimizations.cs  TranslatedSub.cs  TranslatedSubType.cs  Translator.cs  TranslatorCache.cs
Ryujinx.Audio/: AudioFormat.cs  AudioManager.cs  Constants.cs  Downmixing.cs  DspUtils.cs  IAalOutput.cs  PlaybackState.cs  ReleaseCallback.cs  ResultCode.cs  Ryujinx.Audio.csproj
Ryujinx.Audio.Backends/: Ryujinx.Audio.Backends.csproj
Ryujinx.Audio.Backends.OpenAL/: OpenALAudioBuffer.cs  OpenALHardwareDeviceDriver.cs  OpenALHardwareDeviceSession.cs  Ryujinx.Audio.Backends.OpenAL.csproj
Ryujinx.Audio.Backends.SDL2/: Ryujinx.Audio.Backends.SDL2.csproj  SDL2HardwareDeviceDriver.cs  SDL2HardwareDeviceSession.cs
Ryujinx.Audio.Backends.SoundIo/: Ryujinx.Audio.Backends.SoundIo.csproj  SoundIoAudioBuffer.cs  SoundIoHardwareDeviceDriver.cs  SoundIoHardwareDeviceSession.cs
Ryujinx.Audio.Renderer/: RendererConstants.cs  ResultCode.cs  Ryujinx.Audio.Renderer.csproj
Ryujinx.Ava/: App.axaml  App.axaml.cs  AppHost.cs  Program.cs  Ryujinx.Ava.csproj
Ryujinx.Common/: BitUtils.cs  Hash128.cs  HexUtils.cs  PerformanceCounter.cs  ReactiveObject.cs  ReferenceEqualityComparer.cs  ReleaseInformation.cs  ReleaseInformations.cs  Ryujinx.Common.csproj  StructIOExtension.cs  SystemInfo.cs  XXHash128.cs
Ryujinx.Core/: Config.cs  Hid.cs  LogClass.cs  Logging.cs  PerformanceStatistics.cs  Ryujinx.Core.csproj  Switch.cs  VirtualFileSystem.cs  VirtualFs.cs
Ryujinx.Cpu/: AddressSpace.cs  CpuContext.cs  ExceptionCallbacks.cs  ICpuContext.cs  IExecutionContext.cs  IVirtualMemoryManagerTracked.cs  InvalidAccessHandler.cs  JitMemoryAllocator.cs  JitMemoryBlock.cs  MemoryEhMeilleure.cs  MemoryHelper.cs  MemoryManager.cs  MemoryManagerHostMapped.cs  MemoryNotContiguousException.cs  PrivateMemoryAllocation.cs  PrivateMemoryAllocator.cs  Ryujinx.Cpu.csproj  WritableRegion.cs
Ryujinx.Debugger/: Debugger.cs  Ryujinx.Debugger.csproj
Ryujinx.Graphics.Device/: AccessControl.cs  DeviceState.cs  IDeviceState.cs  RegisterAttribute.cs  (+3 more)
src/RyujinxAndroid/app/src/main/cpp/: CMakeLists.txt  ryuijnx.h  ryujinx.cpp
(+10448 files in other folders)
